refactor: use FastUtil collections