@@ -8,6 +8,7 @@ import net.flectone.pulse.model.util.TextScreen;
 import net.flectone.pulse.model.util.Times;
 import net.kyori.adventure.text.Component;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.UUID;
 
@@ -29,7 +30,7 @@ public class HytaleTextScreenRender implements TextScreenRender {
 
     @Override
     public List<Integer> getPassengers(UUID uuid) {
-        return List.of();
+        return Collections.emptyList();
     }
 
     @Override
